WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151459
FTL->B3 lowering should support lazy slow paths, patchpoints, all integer comparisons, and more load/stores
https://bugs.webkit.org/show_bug.cgi?id=151459
Summary
FTL->B3 lowering should support lazy slow paths, patchpoints, all integer com...
Filip Pizlo
Reported
2015-11-19 12:52:35 PST
Patch forthcoming.
Attachments
the patch
(8.95 KB, patch)
2015-11-19 12:53 PST
,
Filip Pizlo
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-11-19 12:53:13 PST
Created
attachment 265887
[details]
the patch
Filip Pizlo
Comment 2
2015-11-19 13:01:11 PST
Landed in
http://trac.webkit.org/changeset/192654
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug